# fam

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/sdl_demo/: CMakeLists.txt  main.c  sdl_demo.c
include/: familib.h
include/fam/: apu.h  common.h  fam.h  ftm.h  io.h  player.h
internal/fam/: util.h
internal/fam/internal/: player_types.h  stream_types.h
src/: apu.c  familib.c  ftm.c  io.c  player.c
tests/: CMakeLists.txt  test_apu.c
